# watos

./: .gitignore  CLAUDE.md  Cargo.toml  FILESYSTEM_ANALYSIS_SUMMARY.md  Makefile  README.md  test_gwbasic.sh  test_ls.sh
.cargo/: config-uefi.toml  config.toml
ai-temp/: DOS16_PLAN.md  DOS4G.md  IMPLEMENTATION_SUMMARY.md  NETWORK_ROADMAP.md  TASKS.md  apps.md
crates/apps/: watos-app.ld
crates/apps/cat/: Cargo.toml
crates/apps/cd/: Cargo.toml
crates/apps/chcp/: Cargo.toml
crates/apps/clear/: Cargo.toml
crates/apps/console/: Cargo.toml  linker.ld
crates/apps/console/src/: main.rs
crates/apps/cp/: Cargo.toml
crates/apps/date/: Cargo.toml
crates/apps/df/: Cargo.toml
crates/apps/drives/: Cargo.toml
crates/apps/echo/: Cargo.toml
crates/apps/gwbasic/: Cargo.toml  EXAMPLES.md  linker.ld
crates/apps/gwbasic/.cargo/: config.toml
crates/apps/gwbasic/examples/: README.md  arithmetic.bas  conditionals.bas  fibonacci.bas  flower.bas  flowers.bas  fractal-tree.bas  guess.bas  mandelbrot_simple.bas  mandelbrot_svga.bas  spirograph.bas  spirograph_simple.bas  svga_test.bas
crates/apps/gwbasic/src/: console.rs  error.rs  functions.rs  interpreter.rs  lexer.rs  linker.ld  main.rs  parser.rs  value.rs  watos_main.rs
crates/apps/gwbasic/src/graphics_backend/: mod.rs  watos_vga.rs  window.rs
crates/apps/gwbasic/src/platform/: mod.rs  stub_platform.rs  watos_platform.rs
crates/apps/ln/: Cargo.toml
crates/apps/loadkeys/: Cargo.toml
crates/apps/login/: Cargo.toml
crates/apps/ls/: Cargo.toml
crates/apps/lsblk/: Cargo.toml
crates/apps/mem/: Cargo.toml
crates/apps/mkdir/: Cargo.toml
crates/apps/mkfifo/: Cargo.toml
crates/apps/mount/: Cargo.toml
crates/apps/mv/: Cargo.toml
crates/apps/ps/: Cargo.toml
crates/apps/pwd/: Cargo.toml
crates/apps/reboot/: Cargo.toml
crates/apps/rm/: Cargo.toml
crates/apps/shell/: Cargo.toml
crates/apps/shutdown/: Cargo.toml
crates/apps/touch/: Cargo.toml
crates/apps/uname/: Cargo.toml
crates/apps/uptime/: Cargo.toml
crates/boot/: Cargo.toml
crates/boot/src/: main.rs
crates/core/arch/: Cargo.toml
crates/core/mem/: Cargo.toml
crates/core/mem/src/: heap.rs  layout.rs  lib.rs  paging.rs  phys.rs  pmm.rs  user_access.rs  vmm.rs
crates/core/path/: Cargo.toml
crates/core/syscall/: Cargo.toml
crates/dos16-core/: Cargo.toml
crates/dos16-core/src/: tests.rs
crates/drivers/audio/generic/: Cargo.toml  README.md
crates/drivers/audio/generic/examples/: basic_usage.rs
crates/drivers/audio/generic/src/: lib.rs
crates/drivers/network/e1000/: Cargo.toml
crates/drivers/network/e1000/src/: lib.rs
crates/drivers/traits/: Cargo.toml
crates/drivers/traits/src/: audio.rs  block.rs  bus.rs  debug.rs  input.rs  lib.rs  nic.rs  video.rs
crates/drivers/video/: Cargo.toml
crates/echo/: Cargo.toml
crates/emu/dos16/: Cargo.toml
crates/gwbasic/: Cargo.toml  README.md  linker.ld
crates/gwbasic/examples/: arrays.bas  flower_simple.bas  hello.bas  loops.bas  mandelbrot.bas  subroutines.bas
crates/gwbasic/src/: fileio.rs  graphics.rs  interpreter.rs  lib.rs  linker.ld  watos_main.rs
crates/gwbasic/src/graphics_backend/: ascii.rs  watos_vga.rs
crates/gwbasic/src/platform/: mod.rs  std_platform.rs  watos_platform.rs
crates/gwbasic/tests/: integration_test.rs
crates/network/stack/: Cargo.toml
crates/storage/devfs/: Cargo.toml
crates/storage/fat/: Cargo.toml
crates/storage/fat/src/: bpb.rs  cluster.rs  dir.rs  file.rs  lib.rs  table.rs
crates/storage/procfs/: Cargo.toml
crates/storage/vfs/: Cargo.toml
crates/storage/wfs/: Cargo.toml
crates/storage/wfs/.cargo/: config.toml
crates/storage/wfs/src/: lib.rs  vfs.rs  vfs_adapter.rs
crates/storage/wfs/src/core/: extent.rs  freespace.rs  fs.rs  mod.rs  structures.rs  tests.rs
crates/storage/wfs/src/v3/: dir.rs  fs.rs  inode.rs  mod.rs  node.rs  structures.rs  transaction.rs  tree.rs
crates/sys/console/: Cargo.toml
crates/sys/process/: Cargo.toml
crates/sys/readline/: Cargo.toml
crates/sys/readline/src/: buffer.rs  completer.rs  editor.rs  emacs.rs  history.rs  key.rs  lib.rs  terminal.rs  vi.rs
crates/sys/runtime/: Cargo.toml
crates/sys/terminal/: Cargo.toml
crates/sys/users/: Cargo.toml
crates/sys/vt/: Cargo.toml
crates/watos-syscall/src/: lib.rs
crates/wfs-common/: Cargo.toml
crates/wfs-common/src/: lib.rs
docs/: ARCHITECTURE.md  CHRIS_TODO.md  DEBUGGING.md  FILESYSTEM_EXECUTIVE_SUMMARY.md  FILESYSTEM_GAP_ANALYSIS.md  FILESYSTEM_QUICK_REFERENCE.md  FILESYSTEM_REMEDIATION_PLAN.md  FIX_SUMMARY.md  GWBASIC_GRAPHICS.md  LOGIN_SYSTEM.md  MEM.md  PKLITE_FORMAT.md  UNIMPLEMENTED_FEATURES.md
docs/examples/: syscall_validation.rs
junk/: console.rs  globals.rs  interrupts.rs  lib.rs.bak  main.rs.bak  stack.rs
junk/disk/: drives.rs  mod.rs  partition.rs  wfs.rs
junk/dos16-core/src/: lib.rs
junk/drivers/: mod.rs
junk/framework/: Cargo.toml
junk/framework/src/: block.rs  bus.rs  char.rs  (+2 more)
junk/io/: file_io.rs  mod.rs
junk/net/: mod.rs
junk/process/: mod.rs
junk/runtime/: mod.rs
rootfs/: AUTOEXEC.BAT  CONFIG.SYS  autoexec.bat  claude.md  config.sys  hello.com  readme.md
rootfs/basic/: # WATOS TODO.md  FUNCTIONS.BAS  MANDELBROT-HIRES.BAS  STRINGS.BAS
rootfs/system/: term
scripts/: boot_test.sh  build.sh  build_vmware.sh  check_deps.sh  container.sh  create_boot_image.sh  test.sh  test_exe.sh
src/: console.rs  gdt.rs  interrupts.rs  lib.rs  linker.ld  main.rs  mmu.rs  tss.rs
src/disk/: ahci.rs  drives.rs  fat.rs  mod.rs  vfs.rs  wfs.rs
src/io/: file_io.rs  mod.rs
src/net/: e1000.rs  mod.rs  pci.rs  stack.rs
src/process/: elf.rs  mod.rs
src/runtime/: dos16.rs  mod.rs  native64.rs
tools/coreutils/: Cargo.toml  Makefile  README.md  cat.asm  copy.asm  del.asm  echo.asm  linker.ld  more.asm  ren.asm
tools/coreutils/.cargo/: config.toml
tools/coreutils/src/: lib.rs
tools/exe-tester/: Cargo.toml
tools/mkcodepages/: Cargo.toml
tools/mkfs.wfs/: Cargo.toml
tools/mkfs.wfs/.cargo/: config.toml
tools/mkfs.wfs/src/: main.rs
tools/mkkeymaps/: Cargo.toml
vmware/: watos.ovf  watos.vmx
(+144 files in other folders)
