[package]
name = "watos"
version = "0.1.0"
edition = "2021"

[dependencies]
linked_list_allocator = "0.10.5"

# Core crates
watos-arch = { path = "crates/core/arch" }
watos-mem = { path = "crates/core/mem" }

# Process management
watos-process = { path = "crates/sys/process" }

[workspace]
members = [
    # Bootloader
    "crates/boot",

    # Core crates (no internal deps)
    "crates/core/arch",
    "crates/core/mem",
    "crates/core/syscall",

    # Driver traits
    "crates/drivers/traits",

    # Bus drivers
    "crates/drivers/bus/pci",

    # Storage drivers
    "crates/drivers/storage/ahci",

    # Network drivers
    "crates/drivers/network/e1000",

    # Input drivers
    "crates/drivers/input/ps2",

    # Storage subsystem
    "crates/storage/vfs",
    "crates/storage/fat",
    "crates/storage/wfs",

    # Network subsystem
    "crates/network/stack",

    # System services
    "crates/sys/console",
    "crates/sys/process",
    "crates/sys/runtime",
    "crates/sys/terminal",

    # Emulation
    "crates/emu/dos16",

    # Applications
    "crates/apps/gwbasic",
    "crates/apps/echo",
    "crates/apps/console",
    "crates/apps/date",
]
exclude = ["junk", "tools/exe-tester", "tools/mkfs.wfs"]

[workspace.dependencies]
uefi = "0.25"
uefi-services = "0.21"
spin = "0.5.2"

[features]
default = []
# Debug features - passed down to driver traits
debug-all = []
debug-storage = []
debug-network = []
debug-input = []
debug-video = []
debug-audio = []
debug-bus = []
