[package]
name = "watos"
version = "0.1.0"
edition = "2021"

[dependencies]
linked_list_allocator = "0.10.5"
spin = "0.5.2"

# Core crates
watos-arch = { path = "crates/core/arch" }
watos-mem = { path = "crates/core/mem" }

# Process management
watos-process = { path = "crates/sys/process" }

# User management
watos-users = { path = "crates/sys/users" }

# Console management
watos-console = { path = "crates/sys/console" }

# Virtual terminal subsystem
watos-vt = { path = "crates/sys/vt" }

# Drivers
watos-driver-traits = { path = "crates/drivers/traits" }
watos-driver-pci = { path = "crates/drivers/bus/pci" }
watos-driver-ahci = { path = "crates/drivers/storage/ahci" }
watos-driver-video = { path = "crates/drivers/video" }

# Filesystem
wfs-common = { path = "crates/storage/wfs", features = ["vfs"] }
watos-vfs = { path = "crates/storage/vfs" }
watos-fat = { path = "crates/storage/fat" }

[workspace]
members = [
    # Bootloader
    "crates/boot",

    # Core crates (no internal deps)
    "crates/core/arch",
    "crates/core/mem",
    "crates/core/syscall",

    # Driver traits
    "crates/drivers/traits",

    # Bus drivers
    "crates/drivers/bus/pci",

    # Storage drivers
    "crates/drivers/storage/ahci",

    # Network drivers
    "crates/drivers/network/e1000",

    # Input drivers
    "crates/drivers/input/ps2",

    # Video drivers
    "crates/drivers/video",

    # Audio drivers
    "crates/drivers/audio/generic",

    # Storage subsystem
    "crates/storage/vfs",
    "crates/storage/fat",
    "crates/storage/wfs",
    "crates/storage/devfs",
    "crates/storage/procfs",

    # Network subsystem
    "crates/network/stack",

    # System services
    "crates/sys/console",
    "crates/sys/process",
    "crates/sys/runtime",
    "crates/sys/terminal",
    "crates/sys/users",
    "crates/sys/vt",

    # Emulation
    "crates/emu/dos16",

    # Applications
    "crates/apps/gwbasic",
    "crates/apps/echo",
    "crates/apps/console",
    "crates/apps/date",
    "crates/apps/clear",
    "crates/apps/uname",
    "crates/apps/uptime",
    "crates/apps/ps",
    "crates/apps/drives",
    "crates/apps/ls",
    "crates/apps/pwd",
    "crates/apps/cd",
    "crates/apps/mkdir",
    "crates/apps/ln",
    "crates/apps/mkfifo",
    "crates/apps/df",
    "crates/apps/cat",
    "crates/apps/rm",
    "crates/apps/touch",
    "crates/apps/cp",
    "crates/apps/mv",
    "crates/apps/shutdown",
    "crates/apps/reboot",
    "crates/apps/lsblk",
    "crates/apps/mount",
    "crates/apps/login",
    "crates/apps/shell",
]
exclude = ["junk", "tools/exe-tester", "tools/mkfs.wfs"]

[workspace.dependencies]
uefi = "0.25"
uefi-services = "0.21"
spin = "0.5.2"

[features]
default = []
# Debug features - passed down to driver traits
debug-all = []
debug-storage = []
debug-network = []
debug-input = []
debug-video = []
debug-audio = []
debug-bus = []
