[package]
name = "watos-gwbasic"
version = "0.1.0"
authors = ["chris17453"]
edition = "2021"
description = "GW-BASIC in modern Rust - for WATOS and host systems"
license = "MIT"

[lib]
name = "rust_gwbasic"
path = "src/lib.rs"

[[bin]]
name = "rust-gwbasic"
path = "src/main.rs"
required-features = ["host"]

[[bin]]
name = "gwbasic"
path = "src/watos_main.rs"
required-features = ["watos"]

[features]
default = ["host"]
host = ["std", "dep:minifb"]
watos = ["dep:watos-syscall"]
std = []

[dependencies]
minifb = { version = "0.25", optional = true }
libm = "0.2"
watos-syscall = { path = "../watos-syscall", features = ["no-std"], optional = true }

[profile.release]
opt-level = "z"
lto = true
panic = "abort"
codegen-units = 1
