[package]
name = "watos-driver-e1000"
version = "0.1.0"
edition = "2021"
description = "WATOS Intel e1000 network driver"

[dependencies]
watos-driver-traits = { path = "../../traits" }
watos-driver-pci = { path = "../../bus/pci" }

[features]
default = []
debug = ["watos-driver-traits/debug-network"]
